User guide done

--- a/report/brugervejledning.tex
+++ b/report/brugervejledning.tex
@@ -54,8 +54,33 @@ I side-menuen, som kan åbnes øverst til venstre, kan du se en oversigt over al
 \subsection{Se og opret planter}
 Tryk på side-menuen og åbn leksikonnet. Her vil du få en oversigt over alle de planter, som appen per default har. Du kan søge efter en bestemt plante eller blot scrolle gennem listen. Hvis du trykker på en plante, vil du blive ført til en informationsside, hvor du kan se alt det data, som appen kender om den givne plante. Hvis du savner en plante, gerne vil have en seperat plante i appen for en bestemt sort eller lignende, kan du i bunden vælge "Ny plante". Her har du mulighed for at oprette dine egne planter og derefter bruge dem præcis som de prædefinerede.
 
-\subsection{Få styr på sædskifte}
-
 \subsection{Hvilke planter er i sæson?}
+Hvis du fra side-menuen navigerer til planter i sæson, vil du se to lister: En liste over alle planter i sæson, der kan plantes udendørs, og en liste over alle planter i sæson, der kan plantes i drivhus. På den måde kan du altid se, hvilke frø du skal købe, hvis du gerne vil så noget nyt lige nu. 
+Hvis du derimod gerne vil se planter, der først kommer i sæson senere, kan du bruge leksikonnet og klikke på de planter, du er interesseret i.
+
+\subsection{Få styr på sædskifte}
+\begin{minipage}{0.4\textwidth}
+\begin{figure}[H]
+    \centering
+    \frame{\includegraphics[width=\textwidth]{img/screenshot-croprotation.jpg}}
+    \caption{Et eksempel på hvordan sædskifte-siden kan se ud}
+\end{figure}
+\end{minipage} \hfill
+\begin{minipage}{0.55\textwidth}
+Det er vigtigt at holde styr på sædskifteintervaller, så man ikke udpiner jorden. Nogle typer af planter har brug for lang tid inden de må plantes et tidligere sted igen.
+
+Som nævnt tidligere kan du flytte rundt på dine bede i oversigten over bede. Når du gør det, holder appen styr på hvor længe et bed har været et bestemt sted samt hvor det har været før. Under sædskifte kan du få et overblik over alle disse tal. Position svarer til et beds placering i oversigten. Du kan se hvor lang tid dit bed har været på nuværende position. Hvis du folder bedet ud, kan du se hvor du før har haft samme bed placeret, og hvor lang tid der må gå, i følge de planter bedet har, før det igen må plantes på disse positioner.
+\end{minipage} 
+
 
 \subsection{Vurder vanding i forhold til lokalvejret}
+\begin{minipage}{0.4\textwidth}
+\begin{figure}[H]
+    \centering
+    \frame{\includegraphics[width=\textwidth]{img/screenshot-vanding.jpg}}
+    \caption{Planter, der måske trænger til vand}
+\end{figure}
+\end{minipage} \hfill
+\begin{minipage}{0.55\textwidth}
+Hvis du har valgt at slå lokationsdeling til, kan du under vejrdata se hvilken placering appen henter data fra, samt hvornår appen sidst har registreret en regnvejrsdag. Du kan også se hvor mange mm regn, der er faldet på denne dag. Denne information bruger appen i samspil med dine egne indtastede data om vanding af dine planter. Hvis der er gået tilstrækkelig lang tid siden du enten har vandet selv eller det har regnet, vil appen foreslå, at du tjekker om de har brug for vand - dette kan ses inde på de enkelte bede.
+\end{minipage} 
