Introduction and user tests

--- a/report/main.tex
+++ b/report/main.tex
@@ -14,6 +14,8 @@
 \tableofcontents
 \newpage
 
+\input{indledning}
+\newpage
 \input{brugervejledning}
 \newpage
 \input{brugertests}
@@ -24,9 +26,11 @@
 \newpage
 \input{future}
 \newpage
+\input{sammenligning}
+\newpage
 \input{refleksion}
 \newpage
-\input{sammenligning}
+\input{konklusion}
 \newpage
 \input{appendix}
 
