--- a/report/process.tex
+++ b/report/process.tex
@@ -21,6 +21,10 @@ Vi fortsatte ydermere med at lave estimeringer og give hver opgave et antal stor
 \subsection{Burn-up chart}
 Vi har undervejs i projektet gjort brug af et burn-up chart for at se udviklingen i projektet. Det har givet os et overblik over hvor meget vi har været nødt til at tage med i hvert sprint, for at kunne blive færdige til tiden. Vi har også kunne se, at vores projekt har udviklet sig meget i forhold til starten af projektet, og der derfor er kommet flere og flere opgaver i vores backlog.
 
-INDSÆT BURN-UP CHART
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=1\textwidth]{img/burn-up-chart.png}
+    \caption{Burn-up chart}
+\end{figure}
 
 Ud fra grafen har vi lavet en udregning, som har fortalt os hvor mange story points, som vi har været nødt til at tage med. Vi sørgede så for altid at tage flere point med i sprintet end der var nødvendigt, da vi næsten altid fik flere opgaver ind efter et sprint var slut. Disse opgaver kom typisk fra en brugertest, men kunne også være som følge af problemer eller idéer, som vi selv kom frem til.
