--- a/report/refleksion.tex
+++ b/report/refleksion.tex
@@ -1,13 +1,30 @@
 \section{Refleksion}
 
 \subsection{Indledende forventninger}
-Da vi startede projektet, skrev vi følgende problemformulering:
-\medskip
+Jævnfør problemformulering fra indledningen, havde vi følgende mål:
 
+\begin{itemize}
+        \item
+    The ability to see what you have planted and where
+        \item
+    An overview of the actions you need to perform and when
+        \item
+    An overview of crop rotation for your vegetable garden
+        \item
+    Notifications about your crops and integration with calendar
+        \item
+    Overview of your plating locations (outdoors, greenhouse, etc.)
+        \item
+    Lexicon with additional info about plants 
+        \item
+    Research: integration with sensors or other IOT devices
+        \item
+    Research: Image analysis for identifying crops
+\end{itemize}
 
 Derudover havde vi internt i gruppen nogle forestillinger om appens fremtidige kunnen:
 
-\begin{enumerate}
+\begin{itemize}
     \item Guide dig fuldstændig i alt, hvad du foretager dig i din køkkenhave. Herunder indgår vanding, plantning/såning, forspiring og udplantning, sædskifte og høst
     \item Oversigter over alle handlinger, der skal udføres
     \item Understøtte planter indenfor, udenfor og i drivhus
@@ -15,9 +32,12 @@ Derudover havde vi internt i gruppen nogle forestillinger om appens fremtidige k
     \item Designe sit eget haveområde i appen
     \item Se historik over vanding og platning
     \item Planlægning af en ny sæson
-\end{enumerate}
+\end{itemize}
+
+Vi blev dog klogere undervejs og opdagede, at ikke alle disse punkter var gode idéer, samt nogle punkter var for tidskrævende.
 
 \subsection{Appens egentlige rolle}
+Her noget om skiftet af fokus fra at appen kan alt til at den viser alt.
 
 \subsection{Appens omfang}
 Her noget om hvilke forvetninger/krav vi opfyldte, og hvilke vi ikke gjorde.
