Meeting with Sebastian

--- a/report/refleksion.tex
+++ b/report/refleksion.tex
@@ -90,20 +90,60 @@ Derudover kunne man udvide leksikonnet til at have information om planternes for
 
 For at denne idé kunne realiseres, ville man behøve et samarbejde med en udgiver af jordtermometre, samt yderligere data om planter i forhold til jordtemperatur.
 
-\subsubsection*{Gardena vandingssystem}
-Gardena Smart System har en app, der kan forbindes til et vandingssystem og/eller græsslåmaskine. Her er vandingssystemet relevant for køkkenhaver og drivhuse. Deres produkt har en sensor, der afgør hvornår der skal vandes. Den kigger også på vejrudsigten. Brugeren altid sætte den igang eller stoppe en vanding, samt sætte en tidsplan.
+\subsubsection*{Møde med Sebastian}
+Arbejder ikke med mobile apps
+Hobby gardner, dyrker sjældne planter
 
-Dette produkt er klart mere nøjagtig og automatisk end vores feature, der kun tager højde for vejret og ikke er tilknyttet et produkt.
+Identifikation af planter og kan identificere, crowd sourcing
+ITU - projekt, jordfugtighed, temperatur og lys - stick som man satte i jorden.
+	Erregation system - automatisk vanding
+	Social media beskeder - sendte beskeder
 
-Man kunne måske lave et samarbejde med Gardena og få andre features med i deres app, så man på den måde også kan holde styr på sin køkkenhave. Der er dog flere pointer, der taler i mod sådan et samarbejde:
+Fugtighedsmåler, lys og temperatur er meget normal, sparkfun, seedstudio, audafruit. Banggood / Aliexpress
+Sælges med frø til planter
+PH er ikke så normal
+Jordbærdyrkning, industriel precicion agriculture
 
-\begin{enumerate}
-    \item{Gardena lægger på deres hjemmeside meget vægt på, at systemet klarer alt for dig. De skriver b.la. at man kan tage på ferie uden at bekymre sig (REFERENCE TIL SIDEN HER). Vores app lægger mere vægt på udbredning af information, der gør brugeren i stand til selv at handle og tage beslutninger. For at opklare dette punkt, ville man blive nødt til at tale med både brugere af Gardena og (fremtidige) brugere af vores app, samt Gardena for at afstemme forventninger, behov og mål for appen.}
-    \item{Appen ville kunne alt for meget og dermed blive forvirrende. Her ville det igen være nødvendigt at interview eller observere adskillige bruger for at klarlægge dette.}
-    \item{Gardena lader til gerne at ville omfavne haven som helhed, i og med, at de også har en græsslåmaskine, og ikke blot køkkenhavedelen. De ville måske ikke have lyst til at fokusere så meget på køkkenhave, som de features vi har implementeret. Dette ville kræve møder med Gardena for at klarlægge deres forretningsstrategi}
-\end{enumerate}
+Fugtighedsmålere er ikke særlig præcise. Afhængig af kontakten med jorden, kan svinge meget.
+Kan ikke bruge 100kr ting, skal bruge 1000kr ting (professionelle)
 
-Hvis disse pointer alle blev taget i betragtning, klarlagt og pegede på, at et samarbejde ville give god værdi for brugerne og virksomheden, ville en samlægning af de to apps virkelig kunne give styrke - man ville få en app, der gav brugeren mulighed for frihed eller kontrol efter ønske samt give dem meget information og mange features. 
+Man bliver tit nødt til at kigge med sine øjne. Plantens aktivitet.
+Kan automatiseres, men plante-specifikt
 
+Plante-container, nørrebro
 
+Sebastian kører meget på routine, ofte en hobby.
+
+Irma har krydderi-køleskabe agtige ting? Automatiseret plante
+
+Kamerasystemer og ML for at identificere hvordan planen har det. Analyserer plantens farve i bladene.
+Sjældent hobby mest professionelt
+
+scholar.google.com, precision agriculture review / overview
+
+Crowd sourcing, andre brugere indrapporterer data
+
+Kamera-modul til arduino, portenta
+
+Indgangsvinkel: hurtig udvikling, så forskningen ikke kan følge med (ift. IoT), de laver smart alting
+Giver det noget at lave IoT til plante-dyrkning? Går det imod formålet med at have hobbyen?
+
+Skadedyr - en app til at sige om de har skadedyr
+
+Sebastian er Research Lab Manager på ITU, underviser IoT på ITU
+https://www.tindie.com/products/miceuz/chirp-plant-watering-alarm/
+
+https://www.sparkfun.com/products/18044
+
+https://www.seeedstudio.com/Grove-Smart-Plant-Care-Kit-for-Arduino.html
+
+https://www.adafruit.com/?q=plant&sort=BestMatch
+
+https://www.banggood.com/6Pcs-or-12Pcs-Upgraded-Automatic-Watering-Device-Adjustable-Water-Flow-Dripper-With-Switch-Control-Valve-Bracket-Design-DIY-Drip-Irrigation-for-Plants-Indoor-Household-Waterers-Bottle-p-1527006.html?cur_warehouse=CN&ID=514326&rmmds=search
+
+https://scholar.google.com/scholar?as_ylo=2021&q=precision+agriculture&hl=da&as_sdt=0,5
+
+https://scholar.google.com/scholar?hl=da&as_sdt=0%2C5&as_ylo=2021&q=precision+agriculture+review&btnG=
+
+Research Lab Manager https://DASYA.itu.dk underviser IoT
 
