IoT section rewritten with info from Sebastian

--- a/report/refleksion.tex
+++ b/report/refleksion.tex
@@ -1,7 +1,7 @@
 \section{Refleksion}
 
 \subsection{Indledende forventninger}
-Jævnfør problemformulering fra indledningen, havde vi følgende mål:
+Jævnfør problemformulering fra indledningen, havde vi følgende mål (engelsk):
 
 \begin{itemize}
         \item
@@ -37,7 +37,7 @@ Derudover havde vi internt i gruppen nogle forestillinger om appens fremtidige k
 Vi blev dog klogere undervejs og opdagede, at ikke alle disse punkter var gode idéer, samt nogle punkter var for tidskrævende.
 
 \subsection{Appens egentlige rolle}
-Her noget om skiftet af fokus fra at appen kan alt til at den viser alt.
+Efter projektet kom undervejs og vi fik lavet en brugertest på bruger 1, opdagede vi hurtigt at hun ikke ønskede en app, som gjorde alt for hende. Hendes ønske til appen var at hjælpe hende med at huske og planlægge hvor hendes planter er og hvordan hun skal passe dem. Det blev derfor hurtigt klart for os, at fokus skulle ændres fra at være en app, som sørgede for at guide dig fuldstændig i alt hvad du foretager dig i din køkkenhave, til at være en app, som hjælper dig med at planlægge og give overblik i din køkkenhave.
 
 \subsection{Appens omfang}
 Her noget om hvilke forvetninger/krav vi opfyldte, og hvilke vi ikke gjorde.
@@ -71,24 +71,15 @@ Derefter fik vi idéen fra en bruger, at vi kunne give mulighed for at tage et b
 Image analysis blev derfor ikke relevant for dette projekt.
 
 \subsubsection{IoT devices}
-Undervejs i projektet undersøgte vi hvilke køkkenhave-relaterede produkter, der enten allerede fandtes som IoT eller kunne give mening at gøre til en IoT.
+I slutningen af projektet lavede vi et interview med Sebastian Büttrich, der er Research Lab Manager på ITU samt underviser i et IoT-kursus også på ITU. Han har lavet meget hvad der angår IoT enheder, som kan måle forskellige forhold, en plante har. Vi lavede dette interview for at blive klogere på hvad der findes af IoT enheder på markedet og deres rolle i forhold til forbrugerne.
 
-\subsubsection*{Jordtermometer}
-Der findes mange jordtermometre på markedet, men det er ikke lykkedes os at finde nogen IoT-jordtermometre. Derudover lagde vi mærke til, at de heller ikke kommer med en guide til hvilke planter, der tåler hvilken temperatur. Dette skal brugeren selv finde ud af ved f.eks. at købe frøposer med denne information på forsiden, søge på internettet eller læse i bøger. 
+Under interviewet blev vi gjort opmærksomme på de mest normale forhold, som man måler for at se om en plante har det godt. Her nævnte han jordens fugtighed, lys-sensorer og temperaturmålere. Vi spurgte ind til om det var normalt at måle jordens PH-værdi med sådanne sensorer, men det mente han ikke var noget, som var særlig tilgængeligt, men at det var en meget vigtig ting at tage højde for, når man skal sørge for sine planter.
 
-Det kunne derfor måske give mening at lave et samarbejde mellem appen og et jordtermometer. Det ville kræve, at man først lavede en række brugertests med brugere af jordtermometre, for at opleve deres arbejdspraksis og se, om det giver mening for dem at bruge en app.
+Sebastian nævnte at der allerede findes rigtig mange smarte termometre og fugtighedsmålere, som, såvidt vi forstod (SLET?), blev brugt til automatisk vanding eller vedligehold af sine planter. Her kom han dog med et synspunkt, om at automatiserede systemer kan gå hen og blive noget, som går imod idéen med at have en køkkenhave. Han mener at de mennesker, som holder sin egen køkkenhave, har det som en hobby. Hvis man derfor begynder at automatisere hele processen med at have en køkkenhave, kan meget af glæden gå af at passe sin have og sine planter, da hobbyen næsten ikke kommer til udtryk i dit liv. Vi er meget enige i det her synspunkt og vurderede derfor, at hvis vi i fremtiden ønsker at inkludere data fra IoT-enheder, at det skal være til det formål at vise brugeren hvad der foregår i deres køkkenhave.
 
-I det tilfælde, at brugerne oplever det vanskeligt at finde information, at de generelt har meget at holde styr eller på anden vis kan få værdi af en app, ville det være oplagt at lave. Man kunne udvide appens sidemenu med en "Jordtemperatur"-tab. Herinde kunne man måske bruge noget bluetooth eller lignende til at forbinde til sit jordtermometer og appen ville derefter kunne vise dig information såsom:
+Mange af de eksisterende IoT-enheder bliver ofte kun brugt til professionelt landbrug, da de er for dyre og specialicerede at bruge hjemme i en køkkenhave. Priserne er dog på vej ned, men der går alligevel et stykke tid, før det giver mening for en hobbyist at anskaffe sig IoT måleinstrumenter.
 
-\begin{enumerate}
-    \item{Jordtemperaturen}
-    \item{Planter, der kan klare denne jordtemperatur}
-    \item{Hvordan de planter, du allerede har sået, tåler denne jordtemperatur}
-\end{enumerate}
-
-Derudover kunne man udvide leksikonnet til at have information om planternes fortrukne jodtemperatur.
-
-For at denne idé kunne realiseres, ville man behøve et samarbejde med en udgiver af jordtermometre, samt yderligere data om planter i forhold til jordtemperatur.
+Én ting som Sebastian nævnte, at han synes kunne være en god ting at få beskeder om i forhold til sine planter, var i forhold til skadedyr. Her kunne han godt se nytten i at få information om hvorvidt ens plante var ramt af f.eks. bladlus eller andre skadedyr eller sygdomme. Han nævnte at der lige nu findes små kamera-moduler, som bruger image analysis og ML til at fortælle om en plante mangler f.eks. kalk, grundet misfarvning i bladene. Dette er meget plante-specifikt og derudover meget ressourcekrævende, da der skal være et kamera på hver plante, men dog er det muligt.
 
 \subsubsection*{Møde med Sebastian}
 Arbejder ikke med mobile apps
