--- a/report/indledning.tex
+++ b/report/indledning.tex
@@ -1,5 +1,5 @@
 \section{Indledning}
-Idéen til dette projekt opstod efter en afslappet samtale, hvori en den kommende hovedbruger af vores app gav udtryk for en mangel, hun oplevede. Dette førte til flere, mere detaljerede samtaler om at udvikle en app, der kunne hjælpe med at organisere og holde styr på en køkkenhave. Det førte til følgende problemstilling: \medskip 
+Idéen til dette projekt opstod efter en afslappet samtale, hvori en den kommende hovedbruger af vores app gav udtryk for en mangel, hun oplevede. Dette førte til flere, mere detaljerede samtaler om at udvikle en app, der kunne hjælpe med at organisere og holde styr på en køkkenhave. Det førte til følgende problemstilling (engelsk): \medskip 
 
 \textit{This project is a bachelor project that will take place in spring 2021.
 The project will aim to simplify the process of keeping your vegetable garden. This will be done so with an app for Android. It is a cumbersome task to keep track of your vegetable garden. Among other things, here are a few examples:}
