Brugervejledning looked over

--- a/report/preamble.tex
+++ b/report/preamble.tex
@@ -9,6 +9,6 @@
 \usepackage{enumitem}
 \usepackage{tabularx}
 \usepackage[citestyle=authoryear,bibstyle=nature]{biblatex}
-\usepackage[colorlinks,pdfencoding=auto]{hyperref}
+\usepackage[pdfencoding=auto]{hyperref}
 \usepackage[danish]{babel}
 \usepackage{wrapfig, lipsum}
