Meeting with Sebastian

--- a/report/appendix.tex
+++ b/report/appendix.tex
@@ -93,4 +93,16 @@ Begge farveskemaer er udvalgt af en professionel xxxx, og vi har valgt at bruge 
     \item Man kan hive en plantekasse eller potte ned på griddet for at indikere at der er noget her
 \end{itemize}
 
+\subsection{Eksempler på produkter på markedet}
+
+\begin{itemize}
+    \item Chirp! - plant watering alarm, \hyperlink{https://www.tindie.com/products/miceuz/chirp-plant-watering-alarm/}{https://www.tindie.com/products/miceuz/chirp-plant-watering-alarm/}
+    \item Pimoroni PIM518 Grow, \hyperlink{https://www.sparkfun.com/products/18044}{https://www.sparkfun.com/products/18044}
+    \item Grove Smart Plant Care Kit, \hyperlink{https://www.seeedstudio.com/Grove-Smart-Plant-Care-Kit-for-Arduino.html}{https://www.seeedstudio.com/Grove-Smart-Plant-Care-Kit-for-Arduino.html}
+    \item Adafruit produkter, \hyperlink{https://www.adafruit.com/?q=plant&sort=BestMatch}{https://www.adafruit.com/?q=plant&sort=BestMatch}
+    \item Upgraded Automatic Watering Device, \hyperlink{https://www.banggood.com/6Pcs-or-12Pcs-Upgraded-Automatic-Watering-Device-Adjustable-Water-Flow-Dripper-With-Switch-Control-Valve-Bracket-Design-DIY-Drip-Irrigation-for-Plants-Indoor-Household-Waterers-Bottle-p-1527006.html?cur_warehouse=CN&ID=514326&rmmds=search}{https://www.banggood.com/6Pcs-or-12Pcs-Upgraded-Automatic-Watering-Device-Adjustable-Water-Flow-Dripper-With-Switch-Control-Valve-Bracket-Design-DIY-Drip-Irrigation-for-Plants-Indoor-Household-Waterers-Bottle-p-1527006.html?cur_warehouse=CN&ID=514326&rmmds=search}
+    \item Light Meter, \hyperlink{https://www.hackster.io/jendeegan/light-meter-to-measure-plant-growth-conditions-7a12a9}{https://www.hackster.io/jendeegan/light-meter-to-measure-plant-growth-conditions-7a12a9}
+    \item Lua, \hyperlink{https://mu-design.lu/lua#lua-intro}{https://mu-design.lu/lua#lua-intro}
+    \item Soil pH Meter, \hyperlink{https://www.amazon.com/Moisture-Garden-Gardening-Outdoors-Battery/dp/B01J1HO6XY}{https://www.amazon.com/Moisture-Garden-Gardening-Outdoors-Battery/dp/B01J1HO6XY}    
+\end{itemize}
 
