--- a/report/refleksion.tex
+++ b/report/refleksion.tex
@@ -71,70 +71,19 @@ Derefter fik vi idéen fra en bruger, at vi kunne give mulighed for at tage et b
 Image analysis blev derfor ikke relevant for dette projekt.
 
 \subsubsection{IoT devices}
-I slutningen af projektet lavede vi et interview med Sebastian Büttrich, der er Research Lab Manager på ITU samt underviser i et IoT-kursus også på ITU. Han har lavet meget hvad der angår IoT enheder, som kan måle forskellige forhold, en plante har. Vi lavede dette interview for at blive klogere på hvad der findes af IoT enheder på markedet og deres rolle i forhold til forbrugerne.
+I slutningen af projektet lavede vi et interview med Sebastian Büttrich, der er Research Lab Manager på ITU samt underviser i et IoT-kursus, også på ITU. Han har lavet meget hvad der angår IoT enheder, som kan måle forskellige forhold, en plante har. Vi lavede dette interview for at supplere vores viden om hvad, der findes af IoT enheder på markedet og deres rolle i forhold til forbrugerne, samt generelt at få et større indblik omkring området. Listen over de produkter, vi har undersøgt kan ses i bilag XX.
 
-Under interviewet blev vi gjort opmærksomme på de mest normale forhold, som man måler for at se om en plante har det godt. Her nævnte han jordens fugtighed, lys-sensorer og temperaturmålere. Vi spurgte ind til om det var normalt at måle jordens PH-værdi med sådanne sensorer, men det mente han ikke var noget, som var særlig tilgængeligt, men at det var en meget vigtig ting at tage højde for, når man skal sørge for sine planter.
+\subsubsection*{Fugtighed, lys, temperatur og pH}
+Der findes mange enheder til at måle jordtemperatur og -fugtighed, lys og pH, som kan hjælpe dig med at afgøre hvornår, du skal udføre en bestemt handling. Heraf findes der både produkter som IoT, almindelige analog måleinstrumenter samt færdige løsninger, der kan udføre handlingen for dig.
 
-Sebastian nævnte at der allerede findes rigtig mange smarte termometre og fugtighedsmålere, som, såvidt vi forstod (SLET?), blev brugt til automatisk vanding eller vedligehold af sine planter. Her kom han dog med et synspunkt, om at automatiserede systemer kan gå hen og blive noget, som går imod idéen med at have en køkkenhave. Han mener at de mennesker, som holder sin egen køkkenhave, har det som en hobby. Hvis man derfor begynder at automatisere hele processen med at have en køkkenhave, kan meget af glæden gå af at passe sin have og sine planter, da hobbyen næsten ikke kommer til udtryk i dit liv. Vi er meget enige i det her synspunkt og vurderede derfor, at hvis vi i fremtiden ønsker at inkludere data fra IoT-enheder, at det skal være til det formål at vise brugeren hvad der foregår i deres køkkenhave.
-
-Mange af de eksisterende IoT-enheder bliver ofte kun brugt til professionelt landbrug, da de er for dyre og specialicerede at bruge hjemme i en køkkenhave. Priserne er dog på vej ned, men der går alligevel et stykke tid, før det giver mening for en hobbyist at anskaffe sig IoT måleinstrumenter.
-
+\subsubsection*{Kamera og machine learning}
 Én ting som Sebastian nævnte, at han synes kunne være en god ting at få beskeder om i forhold til sine planter, var i forhold til skadedyr. Her kunne han godt se nytten i at få information om hvorvidt ens plante var ramt af f.eks. bladlus eller andre skadedyr eller sygdomme. Han nævnte at der lige nu findes små kamera-moduler, som bruger image analysis og ML til at fortælle om en plante mangler f.eks. kalk, grundet misfarvning i bladene. Dette er meget plante-specifikt og derudover meget ressourcekrævende, da der skal være et kamera på hver plante, men dog er det muligt.
 
-\subsubsection*{Møde med Sebastian}
-Arbejder ikke med mobile apps
-Hobby gardner, dyrker sjældne planter
+\subsubsection*{Vurdering}
+Mange a produkterne beskrevet i de to underafsnit foroven, ville i fremtiden kunne blive integreret med vores app. Her kunne man forestille sig, at brugeren i forbindelse med appen, kan få adgang til data om jordtemperaturen samt få en oversigt over hvad, de kunne plante under disse omstændigheder. Dette ville kræve en række brugertests for at afdække, om denne funktionalitet giver værdi.
 
-Identifikation af planter og kan identificere, crowd sourcing
-ITU - projekt, jordfugtighed, temperatur og lys - stick som man satte i jorden.
-	Erregation system - automatisk vanding
-	Social media beskeder - sendte beskeder
+Sebastian fortalte, at mange af de mere præcise og avancerede IoT-enheder ofte kun bliver brugt til professionelt landbrug, da de er for dyre og specialicerede at bruge hjemme i en køkkenhave. Priserne er dog på vej ned, men der går alligevel et stykke tid, før det giver mening for en hobbyist at anskaffe sig IoT måleinstrumenter. De fleste produkter til en betalelig pris på markedet lige nu, se bilag XX, vil være upræcise, og det vil derfor i langt de fleste tilfælde være langt mere sigende blot at kigge til planterne selv. F.eks. kan placeringen af en sensor i jorden have stor betydning for resultatet af målingen.
 
-Fugtighedsmåler, lys og temperatur er meget normal, sparkfun, seedstudio, audafruit. Banggood / Aliexpress
-Sælges med frø til planter
-PH er ikke så normal
-Jordbærdyrkning, industriel precicion agriculture
+Sebastian kom derudover med en pointe om, at automatiserede systemer kan gå imod idéen med at have en køkkenhave. Han tror at de mennesker, som holder sin egen køkkenhave, inklusiv ham selv, har det som en hobby --- hvis man derfor begynder at automatisere hele processen med at have en køkkenhave, kan meget af glæden gå af at passe sin have og sine planter, da hobbyen næsten ikke kommer til udtryk i dit liv. Dette udspurgte vi vores to brugere omkring. Her svarede de XX.
 
-Fugtighedsmålere er ikke særlig præcise. Afhængig af kontakten med jorden, kan svinge meget.
-Kan ikke bruge 100kr ting, skal bruge 1000kr ting (professionelle)
-
-Man bliver tit nødt til at kigge med sine øjne. Plantens aktivitet.
-Kan automatiseres, men plante-specifikt
-
-Plante-container, nørrebro
-
-Sebastian kører meget på routine, ofte en hobby.
-
-Irma har krydderi-køleskabe agtige ting? Automatiseret plante
-
-Kamerasystemer og ML for at identificere hvordan planen har det. Analyserer plantens farve i bladene.
-Sjældent hobby mest professionelt
-
-scholar.google.com, precision agriculture review / overview
-
-Crowd sourcing, andre brugere indrapporterer data
-
-Kamera-modul til arduino, portenta
-
-Indgangsvinkel: hurtig udvikling, så forskningen ikke kan følge med (ift. IoT), de laver smart alting
-Giver det noget at lave IoT til plante-dyrkning? Går det imod formålet med at have hobbyen?
-
-Skadedyr - en app til at sige om de har skadedyr
-
-Sebastian er Research Lab Manager på ITU, underviser IoT på ITU
-https://www.tindie.com/products/miceuz/chirp-plant-watering-alarm/
-
-https://www.sparkfun.com/products/18044
-
-https://www.seeedstudio.com/Grove-Smart-Plant-Care-Kit-for-Arduino.html
-
-https://www.adafruit.com/?q=plant&sort=BestMatch
-
-https://www.banggood.com/6Pcs-or-12Pcs-Upgraded-Automatic-Watering-Device-Adjustable-Water-Flow-Dripper-With-Switch-Control-Valve-Bracket-Design-DIY-Drip-Irrigation-for-Plants-Indoor-Household-Waterers-Bottle-p-1527006.html?cur_warehouse=CN&ID=514326&rmmds=search
-
-https://scholar.google.com/scholar?as_ylo=2021&q=precision+agriculture&hl=da&as_sdt=0,5
-
-https://scholar.google.com/scholar?hl=da&as_sdt=0%2C5&as_ylo=2021&q=precision+agriculture+review&btnG=
-
-Research Lab Manager https://DASYA.itu.dk underviser IoT
-
+Vi vurderede derfor, at hvis vi i fremtiden ønsker at inkludere data fra IoT-enheder, vil det sandsynligvis give bedst mening at have til formål at vise brugeren hvad, der foregår i deres køkkenhave, frem for præcis hvilken handling, de skal udføre eller en fuldstændig automatisering.
